; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jbd/extr_commit.c_inverted_lock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jbd/extr_commit.c_inverted_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.buffer_head = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, %struct.buffer_head*)* @inverted_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inverted_lock(%struct.TYPE_3__* %0, %struct.buffer_head* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.buffer_head*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store %struct.buffer_head* %1, %struct.buffer_head** %5, align 8
  %6 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %7 = call i32 @jbd_trylock_bh_state(%struct.buffer_head* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %14, label %9

9:                                                ; preds = %2
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = call i32 @spin_unlock(i32* %11)
  %13 = call i32 (...) @schedule()
  store i32 0, i32* %3, align 4
  br label %15

14:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %9
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @jbd_trylock_bh_state(%struct.buffer_head*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @schedule(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
